# cynthionwhisperer

./: .gitignore  README.md
agents/: breaking-out-packetry-api.md
cynthionwhisperer-cli/: README.md  pyproject.toml
cynthionwhisperer-cli/scripts/: dev_setup.sh
cynthionwhisperer-cli/src/cynthionwhisperer_python/: __init__.py  cli.py
cynthionwhisperer-example/: README.md  pyproject.toml
cynthionwhisperer-example/scripts/: dev_setup.sh
cynthionwhisperer-example/src/cynthionwhisperer_python/: cli.py
cynthionwhisperer-rs/: Cargo.toml  reinstall-python-user.sh
cynthionwhisperer-rs/crates/cynthionwhisperer/: Cargo.toml
cynthionwhisperer-rs/crates/cynthionwhisperer-py/: Cargo.toml  build.rs  pyproject.toml
cynthionwhisperer-rs/crates/cynthionwhisperer-py/src/: lib.rs
cynthionwhisperer-rs/crates/cynthionwhisperer/src/: capture.rs  event.rs  lib.rs  usb.rs  util.rs
cynthionwhisperer-rs/crates/cynthionwhisperer/src/backend/: cynthion.rs  mod.rs  transfer_queue.rs
gateware/: README.md  pyproject.toml
gateware/src/cynthion/: __init__.py  shared.py
gateware/src/cynthion/gateware/analyzer/: analyzer.py  events.py  top.py
gateware/src/cynthion/gateware/platform/: cynthion_r0_6.py  cynthion_r0_7.py  cynthion_r1_0.py  cynthion_r1_1.py  cynthion_r1_2.py  cynthion_r1_3.py
