[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cynthionwhisperer-cli"
version = "0.1.0"
description = "Example Python project using the cynthionwhisperer PyO3 extension"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cwcli = "cynthionwhisperer_python.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
